# rust_scriptbots

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN_TO_CREATE_SIBLING_APP_CRATE_TARGETING_WASM.md  PLAN_TO_FIX_RENDERING_ISSUES.md  PLAN_TO_INTEGRATE_BEVY_ENGINE_TO_SCRIPTBOTS.md  PLAN_TO_PORT_SCRIPTBOTS_TO_MODERN_IDIOMATIC_RUST_USING_GPUI.md  README.md  ci-baseline.duckdb  codex_log.txt  run_linux_terminal_mode.sh  run_linux_with_bevy.sh  run_linux_with_gui.sh  run_macos_version_with_bevy.sh  run_macos_version_with_console.sh  run_macos_version_with_gui.sh  run_windows_version_with_bevy.bat  run_windows_version_with_console.bat  run_windows_version_with_gui.bat  run_windows_version_with_gui_on_cpu.bat  rust-toolchain.toml  script_for_setting_up_ubuntu_for_cross_compilation.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
ci/configs/: replay_ci.toml
crates/scriptbots-app/: Cargo.toml
crates/scriptbots-app/src/: command.rs  control.rs  lib.rs  main.rs  servers.rs
crates/scriptbots-app/src/terminal/: mod.rs
crates/scriptbots-app/tests/: terminal_end_to_end.rs  terminal_smoke.rs
crates/scriptbots-bevy/: Cargo.toml
crates/scriptbots-bevy/src/: lib.rs
crates/scriptbots-bevy/tests/: camera.rs  snapshot.rs
crates/scriptbots-brain/: Cargo.toml
crates/scriptbots-brain-ml/: Cargo.toml
crates/scriptbots-brain-ml/src/: lib.rs
crates/scriptbots-brain-neuro/: Cargo.toml
crates/scriptbots-brain-neuro/src/: lib.rs
crates/scriptbots-brain-neuro/tests/: headless.rs
crates/scriptbots-brain/src/: assembly.rs  dwraon.rs  lib.rs  mlp.rs
crates/scriptbots-core/: Cargo.toml
crates/scriptbots-core/benches/: world_bench.rs
crates/scriptbots-core/src/: lib.rs
crates/scriptbots-core/tests/: world_integration.rs
crates/scriptbots-index/: Cargo.toml
crates/scriptbots-index/src/: lib.rs
crates/scriptbots-render/: Cargo.toml
crates/scriptbots-render/frames_render_test/: agents_000001.txt  render_000001.txt
crates/scriptbots-render/src/: lib.rs
crates/scriptbots-render/src/camera/: mod.rs
crates/scriptbots-render/tests/: camera_invariants.rs  snapshot.rs
crates/scriptbots-storage/: Cargo.toml
crates/scriptbots-storage/src/: lib.rs
crates/scriptbots-storage/tests/: historical_golden.rs  persistence_integration.rs
crates/scriptbots-web/: Cargo.toml  README.md
crates/scriptbots-web/src/: lib.rs
crates/scriptbots-web/web/: README.md  index.html  main.js
crates/scriptbots-web/web/renderers/: canvas.js  webgpu.js
crates/scriptbots-world-gfx/: Cargo.toml
crates/scriptbots-world-gfx/src/: lib.rs
docs/perf/: bevy_vs_gpui.md
docs/rendering_reference/: bevy_polish_plan.md  camera_refactor_proposal.md  camera_refactor_task_breakdown.md  camera_stage1_plan.md  capture_legacy_render.sh  checksums.txt  coordination.md  current_renderer_gap_analysis.md  legacy_capture_checklist.md  legacy_reference_annotations.md  legacy_renderer_spec.md  render_config_template.toml  snapshot_harness_design.md  visual_polish_plan.md
docs/rendering_reference/configs/: dense_agents.toml  storm_event.toml
docs/wasm/: PHASE1_FINDINGS.md  RESEARCH_LOG.md  SECURITY_NOTES_PHASE1.md  TODO_PHASE1.md  TODO_PHASE2.md  browser_matrix.csv  cargo_rustflags_notes.md  dependency_audit.csv  multithreading_notes.md  rayon_fallback_plan.md  rendering_metrics_template.csv  rendering_spike_plan.md  spike_canvas_notes.md  spike_webgpu_notes.md
docs/wasm/adrs/: ADR-001-wasm-rendering.md  ADR-002-browser-persistence.md  ADR-003-wasm-audio.md  ADR-004-component-model.md
scripts/: parse_perf_logs.py  run_perf_benchmarks.sh
