[workspace]
resolver = "2"
members = [
    "crates/scriptbots-core",
    "crates/scriptbots-brain",
    "crates/scriptbots-brain-ml",
    "crates/scriptbots-brain-neuro",
    "crates/scriptbots-index",
    "crates/scriptbots-storage",
    "crates/scriptbots-render",
    "crates/scriptbots-app",
    "crates/scriptbots-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
authors = ["ScriptBots Team"]
description = "Evolutionary agent simulation rebuilt in modern Rust with GPUI rendering."

[workspace.dependencies]
anyhow = "1.0.93"
derive_more = "1.0.0"
fastrand = "2.1.0"
rayon = "1.10.0"
rand = { version = "0.9.0", features = ["small_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
ordered-float = "4.2.0"
slotmap = { version = "1.0.7", features = ["serde"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
postcard = { version = "1.0.8", default-features = false, features = ["alloc", "use-std"] }

duckdb = { version = "1.4.1", default-features = false, features = ["bundled"] }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", branch = "main" }
kira = "0.10.1"
candle-core = "0.4.1"
candle-nn = "0.4.1"
tract-onnx = "0.21.6"
tch = "0.18.0"
rstar = "0.12.2"
kiddo = "4.2.0"
neuroflow = "0.2.0"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }

[patch.crates-io]
num-bigint-dig = { git = "https://github.com/dignifiedquire/num-bigint", rev = "d94efb24354fe56dc799d9979c279a542d2ce195" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 16
incremental = true
strip = true
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release-dbg]
inherits = "release"
debug = true
strip = false

[workspace.metadata.dist]
ci = ["github"]

[[workspace.metadata.dist.product]]
package = "scriptbots-app"
