[package]
name = "scriptbots-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.0", features = ["macros", "json"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
mcp-protocol-sdk = { version = "0.5.1", default-features = false, features = ["http"] }
ratatui = { version = "0.30.0-alpha.5" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scriptbots-brain = { path = "../scriptbots-brain" }
scriptbots-brain-ml = { path = "../scriptbots-brain-ml", optional = true }
scriptbots-brain-neuro = { path = "../scriptbots-brain-neuro", optional = true }
scriptbots-core = { path = "../scriptbots-core" }
scriptbots-render = { path = "../scriptbots-render", optional = true }
scriptbots-storage = { path = "../scriptbots-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
smallvec = "1.13"
futures-util = "0.3.31"
tokio-stream = "0.1.16"
slotmap = { workspace = true }
duckdb = { workspace = true }
supports-color = "3.0"
thiserror = { workspace = true }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
crossfire = "2.1.6"
utoipa = { version = "5.4.0", features = ["macros", "axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
crossterm = "0.27"
owo-colors = "4.0"
unicode-width = "0.1"
csv = { workspace = true }
ron = "0.8"
toml = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = { version = "0.2", optional = false }
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading"], optional = false }
mimalloc = { version = "0.1", optional = true }
num_cpus = { workspace = true }

[features]
default = ["ml", "neuro", "fast-alloc"]
gui = ["dep:scriptbots-render"]
ml = ["scriptbots-brain-ml"]
neuro = ["scriptbots-brain-neuro"]
fast-alloc = ["dep:mimalloc"]

[dev-dependencies]
tempfile = "3.13"
serial_test = "3.0"
