[package]
name = "scriptbots-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bevy = { version = "0.17" }
bevy_mesh = { version = "0.17" }
scriptbots-core = { path = "../scriptbots-core" }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
slotmap = { workspace = true }
owo-colors = "4.0"
