[package]
name = "scriptbots-brain-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
scriptbots-brain = { path = "../scriptbots-brain" }
scriptbots-core = { path = "../scriptbots-core" }
rand = { workspace = true }
candle-core = { version = "0.4.1", optional = true }
candle-nn = { version = "0.4.1", optional = true }
tract-onnx = { version = "0.21.6", optional = true }
tch = { version = "0.18.0", optional = true }

[features]
default = []
candle = ["candle-core", "candle-nn"]
tract = ["tract-onnx"]
tch = ["dep:tch"]
