[package]
name = "scriptbots-brain"
version = "0.1.0"
edition = "2024"

[features]
default = ["mlp", "dwraon", "experimental"]
mlp = []
dwraon = []
assembly = []
experimental = ["assembly"]

[dependencies]
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
scriptbots-core = { path = "../scriptbots-core" }
