[package]
name = "scriptbots-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
ordered-float = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["grid"]
grid = []
rstar = ["dep:rstar"]
kd = ["dep:kiddo"]

[dependencies.rstar]
workspace = true
optional = true

[dependencies.kiddo]
workspace = true
optional = true

[lints]
workspace = true
