[package]
name = "scriptbots-render"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
scriptbots-core = { path = "../scriptbots-core" }
scriptbots-brain = { path = "../scriptbots-brain" }
scriptbots-storage = { path = "../scriptbots-storage" }
kira = { workspace = true, optional = true }
rand = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
audio = ["kira"]
