[package]
name = "scriptbots-render"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
scriptbots-core = { path = "../scriptbots-core" }
scriptbots-brain = { path = "../scriptbots-brain" }
scriptbots-storage = { path = "../scriptbots-storage" }
kira = { workspace = true, optional = true }
rand = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
scriptbots-world-gfx = { path = "../scriptbots-world-gfx", optional = true }
pollster = { version = "0.4", optional = true }
wgpu = { version = "27", optional = true }

[features]
default = ["world_wgpu"]
audio = ["kira"]
world_wgpu = ["scriptbots-world-gfx", "pollster", "wgpu"]
