[package]
name = "scriptbots-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
rand = { workspace = true }
scriptbots-core = { path = "../scriptbots-core", default-features = false }
scriptbots-brain = { path = "../scriptbots-brain", default-features = false, features = ["mlp"] }
slotmap = { workspace = true }
postcard = { workspace = true }
js-sys = "0.3.73"

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-sat-f2i-conversions"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-sat-f2i-conversions"]
