[package]
name = "scriptbots-world-gfx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance wgpu-based world renderer for ScriptBots with offscreen readback for GPUI composition."

[lib]
name = "scriptbots_world_gfx"
path = "src/lib.rs"

[dependencies]
wgpu = { version = "27", default-features = false, features = ["vulkan", "wgsl"] }
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.30", default-features = false, features = ["std"] }
tracing = { version = "0.1" }
futures-intrusive = "0.5"

[features]
default = []
compute_binning = []
perf_counters = []


[dev-dependencies]
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }

